<resources>
    <string name="app_name">FoodieHub</string>
    <string name="activity_login">LoginActivity</string>
    <string name="activity_main">MainActivity</string>

    <string name="submit">Submit</string>
    <string name="recent_order">Recent Order</string>
    <string name="clear">Clear</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done!</string>

    <!--Fragments from the drawer-->
    <string name="restruants">Restaurants</string>
    <string name="order_history">Order History</string>
    <string name="about_me">About Me</string>

    <!--LoginActivity-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <!-- MenuGalleryFragment-->

    <string name="table_number">Table Number</string>
    <string name="table_order">Table Number: </string>
    <!-- CheckoutFragment-->
    <string name="food">Food</string>
    <string name="notes">Notes</string>
    <string name="no_note">No Note</string>
    <string name="total">Total</string>

    <!-- AboutMeFragment -->
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="balance">Balance:</string>


    <!-- hints -->
    <string name="add_note">Add note</string>
    <string name="description">Description</string>
    <string name="missing_information">Missing Information</string>
    <string name="cancel_order">Order Cancel</string>
    <string name="no_description">There does not seem to be a description for this food :(</string>
    <string name="click_add_note">Click here to add notes!</string>

    <!--defaults -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>


    <!-- messages -->
    <string name="connection_fail">Connection has Failed</string>

    <string name="login_fail">Login fail</string>

    <!-- Noes-->
    <string name="pick_table_food">Please enter the table number and select at least one food from the menu.</string>
    <string name="bad_connection">Something is wrong with the connection, order status not sent"</string>
    <string name="order_sent">Order Completed!</string>
    <string name="order_cancel">Order has been cancel!</string>
    <string name="order_number">Order Number: </string>

    <string name="total_cost_with_tax">Total Cost with Tax: </string>

    <string name="order_ready">Your order is ready.</string>
    <string name="order_canceled">Your order has been cancel.</string>


    <string name="order_progress">Your order is in progress.</string>
</resources>
