<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/et_add_note"
        android:layout_width="@dimen/large_editbox_width"
        android:layout_height="@dimen/large_editbox_height"
        android:layout_gravity="center"
        android:layout_margin="@dimen/standard_large_gap_size"
        android:hint="@string/click_add_note"
        android:maxLength="@integer/standard_text_size"
        android:singleLine="true"
        bootstrap:be_roundedCorners="true"
        bootstrap:be_state="success" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">


        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btn_clear"
            android:layout_width="@dimen/standard_button_width"
            android:layout_height="@dimen/standard_button_height"
            android:layout_margin="@dimen/standard_large_gap_size"
            android:text="@string/clear"
            bootstrap:bb_roundedCorners="true" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btn_done"
            android:layout_width="@dimen/standard_button_width"
            android:layout_height="@dimen/standard_button_height"
            android:layout_margin="@dimen/standard_large_gap_size"
            android:text="@string/done"
            bootstrap:bb_roundedCorners="true" />

    </LinearLayout>

</LinearLayout>