<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_large_gap_size"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:textSize="@dimen/large_textsize"
            android:text="@string/food" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingStart="@dimen/menu_image_size"
            android:paddingEnd="@dimen/menu_image_size"
            android:textSize="@dimen/large_textsize"
            android:text="@string/notes" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/standard_textsize"
                android:text="@string/total" />

            <TextView
                android:id="@+id/tv_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/standard_textsize"
                android:text="@string/total"/>

            </LinearLayout>
    </RelativeLayout>

    <ListView
        android:id="@+id/lv_orders"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />

</LinearLayout>