<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/profile_gapsize"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="@dimen/menu_image_size"
        android:layout_height="@dimen/menu_image_size"
        android:layout_margin="@dimen/standard_large_gap_size"
        android:src="@drawable/profile" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/standard_large_gap_size">

        <TextView
            android:id="@+id/label_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/standard_extra_large_gap_size"
            android:text="@string/name"
            android:textSize="@dimen/big_textsize" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/label_name"
            android:maxLines="1"
            android:textSize="@dimen/big_textsize" />

        <TextView
            android:id="@+id/label_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_name"
            android:paddingEnd="@dimen/standard_extra_large_gap_size"
            android:text="@string/email"
            android:textSize="@dimen/big_textsize" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name"
            android:layout_toEndOf="@id/label_email"
            android:maxLines="1"
            android:textSize="@dimen/big_textsize" />

        <TextView
            android:id="@+id/label_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_email"
            android:paddingEnd="@dimen/standard_extra_large_gap_size"
            android:text="@string/balance"
            android:textSize="@dimen/big_textsize" />

        <TextView
            android:id="@+id/tv_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_email"
            android:layout_toRightOf="@id/label_balance"
            android:maxLines="1"
            android:textSize="@dimen/big_textsize" />

    </RelativeLayout>

</LinearLayout>